[project]
name = "baymax-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kevin-weitgenant",email = "kevin.weitgenant@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    # langgraph will be added by the next command
    "langgraph (>=0.3.34,<0.4.0) ; python_version >= \"3.11\" and python_version < \"4.0\"",
    "langchain[openai] (>=0.3.24,<0.4.0) ; python_version >= \"3.11\" and python_version < \"4.0\""
]

[tool.poetry]
packages = [{include = "baymax_backend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
